--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@ body {
 }
 body .form {
   min-width: 400px;
-  min-height: 650px;
   background-color: hsl(0, 0%, 100%);
   border: 0.5px solid transparent;
   border-radius: 25px;
@@ -95,8 +94,36 @@ body .form .imageUpload input {
   font-size: 14px;
   padding: 10px;
 }
-body .form .imageUpload img {
-  height: 170px;
+body .form .imageUpload p {
+  display: flex;
+  font-size: 15px;
+  margin-left: 15px;
+  color: hsl(354, 84%, 57%);
+}
+body .form .imageUpload .imagePreview {
+  height: 300px;
+}
+body .form .imageUpload .imagePreview .removeImageButton {
+  display: flex;
+  height: 30px;
+  width: 40%;
+  margin-left: 15px;
+  border: 2px solid hsl(228, 100%, 84%);
+  margin-bottom: 10px;
+  margin-top: 5px;
+  font-size: 15px;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+}
+body .form .imageUpload .imagePreview .removeImageButton:hover {
+  background-color: hsl(206, 94%, 87%);
+  cursor: pointer;
+}
+body .form .imageUpload .imagePreview img {
+  height: 200px;
+  width: 90%;
+  margin: 10px 15px 10px 15px;
 }
 body .form .imageUpload button {
   width: 90%;
@@ -104,6 +131,7 @@ body .form .imageUpload button {
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 10px;
   border: 2px solid hsl(228, 100%, 84%);
   font-size: 19px;
