--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@ body {
     background-color: $magnolia;
     .form {
         min-width: 400px;
-        min-height: 650px;
+        // min-height: 650px;
         background-color: $white;
         border: 0.5px solid transparent;
         border-radius: 25px;
@@ -105,8 +105,37 @@ body {
                 padding: 10px;
 
             }
-            img {
-                height: 170px;
+            p {
+                display: flex;
+                font-size: 15px;
+                margin-left: 15px;
+                color: $strawberryred;
+            }
+            .imagePreview {
+                height: 300px;
+
+                .removeImageButton {
+                    display: flex;
+                    height: 30px;
+                    width: 40%;
+                    margin-left: 15px;
+                    border: 2px solid $pastelblue;
+                    margin-bottom: 10px;
+                    margin-top: 5px;
+                    font-size: 15px;
+                    flex-wrap: wrap;
+                    align-content: center;
+                    justify-content: center;
+                    &:hover {
+                        background-color: $lightblue;
+                        cursor: pointer;
+                    }
+                }
+                img {
+                height: 200px;
+                width: 90%;
+                margin: 10px 15px 10px 15px;
+                }
             }
             button {
                 width: 90%;
@@ -114,6 +143,7 @@ body {
                 margin-left: 15px;
                 margin-right: 15px;
                 margin-top: 20px;
+                margin-bottom: 20px;
                 border-radius: 10px;
                 border: 2px solid $pastelblue;
                 font-size: 19px;
