--- a/src/App.scss
+++ b/src/App.scss
@@ -15,14 +15,14 @@ body {
     text-align: left;
     background-color: $magnolia;
     .form {
-        min-width: 400px;
-        // min-height: 650px;
+        // min-width: 400px;
         background-color: $white;
         border: 0.5px solid transparent;
         border-radius: 25px;
         box-shadow: 12px 12px 15px 0px $lightgray;
         margin-left: 35%;
         margin-right: 35%;
+        margin-bottom: 30px;
         .name {
             margin-left: 15px;
             margin-right: 15px;
@@ -32,6 +32,13 @@ body {
             justify-content: space-between;
             font-size: 10px;
             align-items: center;
+            .leftPart {
+                display: flex;
+                gap: 5px;
+                p {
+                    color: $purplishblue;
+                }
+            }
             input {
                 border: 1px solid $coolgray;
                 border-radius: 10px;
@@ -56,6 +63,13 @@ body {
             justify-content: space-between;
             font-size: 10px;
             align-items: center;
+            .leftPart {
+                display: flex;
+                gap: 5px;
+                p {
+                    color: $purplishblue;
+                }
+            }
             input {
                 border: 1px solid $coolgray;
                 padding: 5px;
@@ -71,13 +85,6 @@ body {
                 }
             }
         }
-        .leftPart {
-            display: flex;
-            gap: 5px;
-            p {
-                color: $purplishblue;
-            }
-        }
         .notSuccess {
             font-size: 12px;
             display: flex;
@@ -85,35 +92,36 @@ body {
             justify-content: right;
             margin-right: 15px;
         }
-        .imageUpload {
-            font-size: 10px;
-            h1 {
-                font-size: 2em;
-                margin-left: 15px;
-                margin-right: 15px;
-                margin-top: 15px;
-                display: flex;
-                color: $marineblue;
-                justify-content: space-between;
-                align-items: center;
-            }
-            input {
-                margin: 15px;
-                display: flex;
-                color: $marineblue;
-                font-size: 14px;
-                padding: 10px;
-
-            }
-            p {
-                display: flex;
-                font-size: 15px;
-                margin-left: 15px;
-                color: $strawberryred;
+        .uploadAndPreview {
+            .imageUpload {
+                font-size: 10px;
+                h1 {
+                    font-size: 2em;
+                    margin-left: 15px;
+                    margin-right: 15px;
+                    margin-top: 15px;
+                    display: flex;
+                    color: $marineblue;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                input {
+                    margin: 15px;
+                    display: flex;
+                    color: $marineblue;
+                    font-size: 14px;
+                    padding: 10px;
+    
+                }
+                p {
+                    display: flex;
+                    font-size: 15px;
+                    margin-left: 15px;
+                    color: $strawberryred;
+                }
             }
             .imagePreview {
                 height: 300px;
-
                 .removeImageButton {
                     display: flex;
                     height: 30px;
@@ -131,36 +139,117 @@ body {
                         cursor: pointer;
                     }
                 }
-                img {
+                .uploadedImage {
                 height: 200px;
                 width: 90%;
                 margin: 10px 15px 10px 15px;
                 }
             }
-            button {
-                width: 90%;
-                height: 45px;
-                margin-left: 15px;
-                margin-right: 15px;
-                margin-top: 20px;
-                margin-bottom: 20px;
-                border-radius: 10px;
-                border: 2px solid $pastelblue;
-                font-size: 19px;
-                font-weight: bold;
-                color: $marineblue;
-                &:hover {
-                    background-color: $lightblue;
-                }
+        }
+        .submit {
+            width: 90%;
+            height: 45px;
+            margin-left: 15px;
+            margin-right: 15px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            border-radius: 10px;
+            border: 2px solid $pastelblue;
+            font-size: 19px;
+            font-weight: bold;
+            color: $marineblue;
+            &:hover {
+                background-color: $lightblue;
             }
         }
     }
     .bottomPart {
         .listOfAttendees{
             .attendee {
+                height: 75px;
                 display: flex;
                 justify-content: space-around;
+                border: transparent;
+                border-radius: 15px;
+                margin: 10px;
+                box-shadow: 2px 2px 15px 12px $pastelblue;
+                background-color: $lightblue;
+                .fieldName {
+                    // display: flex;
+                    font-size: 15px;
+                    h1 {
+                        font-size: 15px;
+                        margin-bottom: 4px;
+                    }
+                    p {
+                        margin-top: 4px;
+                        margin-bottom: 4px;
+                        padding-bottom: 4px;
+                    }
+                    img {
+                        width: 80px;
+                        height: 40px;
+                    }
+                }
+                .removeButton {
+                    border: transparent;
+                    background-color: transparent;
+                    font-weight: bold;
+                    &:hover {
+                        cursor: pointer;
+                    }
+
+                }    
             }
+        }
+    }
+}
+
+@media only screen and (min-width: 821px) and (max-width: 1920px) {
+    .form {
+        min-width: 400px;
+        max-width: 500px;
+    }
+    .attendee {
+        max-width: 1200px;
+        margin-left: 10% !important;
+        margin-right: 10% !important;
+    }
+}
+@media only screen and (max-width: 768px) {
+    body {
+        width: 100%;
+        .form {
+            width: 100% !important;
+            margin: 0px !important;
+            
+        }
+        .attendee {
+            margin-left: 0px !important;
+            width: 100%;
+            .fieldName {
+                margin: 7px;
+                font-size: 10px !important;
+                h1 {
+                    font-size: 12px !important;
+                }
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    .form {
+        width: 100% !important;
+        margin: 0px !important;
+    }
+    .attendee {
+        margin-left: 0px !important;
+        margin-right: 0px !important;
+        width: 100%;
+        .fieldName {
+            margin: 7px;
+            font-size: 12px !important;
         }
     }
 }
