--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,19 @@ body .form .uploadAndPreview .imageUpload input {
   font-size: 14px;
   padding: 10px;
 }
+body .form .uploadAndPreview .imageUpload input[type=file]::file-selector-button {
+  margin-right: 20px;
+  border: none;
+  background-color: hsl(243, 100%, 62%);
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+body .form .uploadAndPreview .imageUpload input[type=file]::file-selector-button:hover {
+  background: #0d45a5;
+}
 body .form .uploadAndPreview .imageUpload p {
   display: flex;
   font-size: 15px;
@@ -110,12 +123,23 @@ body .form .uploadAndPreview .imageUpload p {
 body .form .uploadAndPreview .imagePreview {
   height: 300px;
 }
+body .form .uploadAndPreview .imagePreview h1 {
+  font-size: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 15px;
+  display: flex;
+  color: hsl(213, 96%, 18%);
+  justify-content: space-between;
+  align-items: center;
+}
 body .form .uploadAndPreview .imagePreview .removeImageButton {
   display: flex;
   height: 30px;
   width: 40%;
   margin-left: 15px;
-  border: 2px solid hsl(228, 100%, 84%);
+  border: 1px solid hsl(228, 100%, 84%);
+  border-radius: 7px;
   margin-bottom: 10px;
   margin-top: 5px;
   font-size: 15px;
@@ -144,6 +168,7 @@ body .form .submit {
   font-size: 19px;
   font-weight: bold;
   color: hsl(213, 96%, 18%);
+  transition: background-color 0.4s ease-in-out;
 }
 body .form .submit:hover {
   background-color: hsl(206, 94%, 87%);
@@ -174,6 +199,21 @@ body .bottomPart .listOfAttendees .attendee .fieldName img {
   width: 80px;
   height: 40px;
 }
+body .bottomPart .listOfAttendees .attendee .moreInfoField {
+  display: flex;
+  justify-content: space-between;
+}
+body .bottomPart .listOfAttendees .attendee .moreInfoField .editingButtons {
+  border: transparent;
+  background-color: transparent;
+}
+body .bottomPart .listOfAttendees .attendee .moreInfoField .editingButtons:hover {
+  cursor: pointer;
+}
+body .bottomPart .listOfAttendees .attendee .moreInfoField .editingButtons img {
+  height: 25px;
+  width: 25px;
+}
 body .bottomPart .listOfAttendees .attendee .removeButton {
   border: transparent;
   background-color: transparent;
@@ -183,49 +223,49 @@ body .bottomPart .listOfAttendees .attendee .removeButton:hover {
   cursor: pointer;
 }
 
-@media only screen and (min-width: 821px) and (max-width: 1920px) {
+@media only screen and (min-device-width: 821px) and (max-device-width: 1920px) {
   .form {
     min-width: 400px;
     max-width: 500px;
   }
   .attendee {
     max-width: 1200px;
-    margin-left: 10% !important;
-    margin-right: 10% !important;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-device-width: 768px) {
   body {
     width: 100%;
   }
   body .form {
-    width: 100% !important;
-    margin: 0px !important;
+    width: 100%;
+    margin: 0px;
   }
   body .attendee {
-    margin-left: 0px !important;
+    margin-left: 0px;
     width: 100%;
   }
   body .attendee .fieldName {
     margin: 7px;
-    font-size: 10px !important;
+    font-size: 10px;
   }
   body .attendee .fieldName h1 {
-    font-size: 12px !important;
+    font-size: 12px;
   }
 }
-@media only screen and (max-width: 820px) {
+@media only screen and (max-device-width: 820px) {
   .form {
-    width: 100% !important;
-    margin: 0px !important;
+    width: 100%;
+    margin: 0px;
   }
   .attendee {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
+    margin-left: 0px;
+    margin-right: 0px;
     width: 100%;
   }
   .attendee .fieldName {
     margin: 7px;
-    font-size: 12px !important;
+    font-size: 12px;
   }
 }/*# sourceMappingURL=App.css.map */
