--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,6 @@ body {
     text-align: left;
     background-color: $magnolia;
     .form {
-        // min-width: 400px;
         background-color: $white;
         border: 0.5px solid transparent;
         border-radius: 25px;
@@ -111,8 +110,20 @@ body {
                     color: $marineblue;
                     font-size: 14px;
                     padding: 10px;
-    
                 }
+                input[type=file]::file-selector-button {
+                    margin-right: 20px;
+                    border: none;
+                    background-color: $purplishblue;
+                    padding: 10px 20px;
+                    border-radius: 10px;
+                    color: #fff;
+                    cursor: pointer;
+                    transition: background-color .2s ease-in-out;
+                    &:hover {
+                        background: #0d45a5;
+                      }
+                  }
                 p {
                     display: flex;
                     font-size: 15px;
@@ -122,12 +133,23 @@ body {
             }
             .imagePreview {
                 height: 300px;
+                h1 {
+                    font-size: 20px;
+                    margin-left: 15px;
+                    margin-right: 15px;
+                    margin-top: 15px;
+                    display: flex;
+                    color: $marineblue;
+                    justify-content: space-between;
+                    align-items: center;
+                }
                 .removeImageButton {
                     display: flex;
                     height: 30px;
                     width: 40%;
                     margin-left: 15px;
-                    border: 2px solid $pastelblue;
+                    border: 1px solid $pastelblue;
+                    border-radius: 7px;
                     margin-bottom: 10px;
                     margin-top: 5px;
                     font-size: 15px;
@@ -158,6 +180,7 @@ body {
             font-size: 19px;
             font-weight: bold;
             color: $marineblue;
+            transition: background-color .4s ease-in-out;
             &:hover {
                 background-color: $lightblue;
             }
@@ -175,7 +198,6 @@ body {
                 box-shadow: 2px 2px 15px 12px $pastelblue;
                 background-color: $lightblue;
                 .fieldName {
-                    // display: flex;
                     font-size: 15px;
                     h1 {
                         font-size: 15px;
@@ -191,6 +213,21 @@ body {
                         height: 40px;
                     }
                 }
+                .moreInfoField {
+                    display: flex;
+                    justify-content: space-between;
+                    .editingButtons {
+                        border: transparent;
+                        background-color: transparent;
+                        &:hover {
+                            cursor: pointer;
+                        }
+                        img {
+                            height: 25px;
+                            width: 25px;
+                        }
+                    }
+                }
                 .removeButton {
                     border: transparent;
                     background-color: transparent;
@@ -198,58 +235,58 @@ body {
                     &:hover {
                         cursor: pointer;
                     }
-
                 }    
             }
         }
     }
 }
 
-@media only screen and (min-width: 821px) and (max-width: 1920px) {
+
+@media only screen and (min-device-width: 821px) and (max-device-width: 1920px) {
     .form {
         min-width: 400px;
         max-width: 500px;
     }
     .attendee {
         max-width: 1200px;
-        margin-left: 10% !important;
-        margin-right: 10% !important;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-device-width: 768px) {
     body {
         width: 100%;
         .form {
-            width: 100% !important;
-            margin: 0px !important;
+            width: 100%;
+            margin: 0px;
             
         }
         .attendee {
-            margin-left: 0px !important;
+            margin-left: 0px;
             width: 100%;
             .fieldName {
                 margin: 7px;
-                font-size: 10px !important;
+                font-size: 10px;
                 h1 {
-                    font-size: 12px !important;
+                    font-size: 12px;
                 }
             }
         }
     }
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-device-width: 820px) {
     .form {
-        width: 100% !important;
-        margin: 0px !important;
+        width: 100%;
+        margin: 0px;
     }
     .attendee {
-        margin-left: 0px !important;
-        margin-right: 0px !important;
+        margin-left: 0px;
+        margin-right: 0px;
         width: 100%;
         .fieldName {
             margin: 7px;
-            font-size: 12px !important;
+            font-size: 12px;
         }
     }
 }
